[package]
name = "near-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { package = "gpui-ce", version = "0.3" }
parking_lot = "0.12"
smol = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bs58 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-local-authentication = "0.3"

[[bin]]
name = "near-wallet"
path = "main.rs"
